fix series title cutoffs

--- a/app/assets/stylesheets/models/series.css.scss
+++ b/app/assets/stylesheets/models/series.css.scss
@@ -55,7 +55,7 @@
   }
 
   .card-subtitle h4 {
-    line-height: 20px;
+    line-height: 24px;
   }
 
   .card-subtitle h4 small {
